--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+  font family: Georgia, serif;
+  height: 100%;
+  margin: 0;
+  text align: center;
+  width; 100%
+}
+
+
+
+
 p {
 color: red;
 }
