--- a/style.css
+++ b/style.css
@@ -1,22 +1,6 @@
-body {
-  font family: Georgia, serif;
-  height: 100%;
-  margin: 0;
-  text align: center;
-  width; 100%
-}
+.header {
+    color: royalblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
 
-
-h1 {
-  font size: 32px;
-}
-h3 {
-  color: blue;
-  font size: 25px;
-}
-
-
-
-p {
-color: red;
 }
