Addition of Padding

--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ h2 {
     font-size: 20px;
 
 }
+div {
+    
+    background-color: #799575;
+    padding-top: 20px;
+    padding-right: 200px;
+    padding-bottom: 20px;
+    padding-left: 200px;
+  }
+  
 
 h3 {
     color: darkolivegreen;
