--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 .header {
     color: #799575;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-
+    font-size: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    Margin-left: 80px;
+    margin-right: 80px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+    padding-right: 100px;
+    Padding-left: 100px; 
+    
 }
 
 h2 {
@@ -12,24 +20,43 @@ h2 {
 
 }
 div {
-    
-    background-color: #799575;
+    border: 1px solid black;
+    margin-top: 20px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 150px;
     padding-top: 20px;
-    padding-right: 200px;
+    padding-right: 100px;
     padding-bottom: 20px;
-    padding-left: 200px;
+    padding-left: 100px;
+    background-image: url("/Users/Volkmann/prime/Images/photo-1558534606-38e55f8d44f2.jpeg");
+    background-repeat: no-repeat;
+    border-radius: 25px;
   }
   
 
 h3 {
-    color: darkolivegreen;
-    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
 
 }
 
+h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 12px;
+    color: whitesmoke;
+}
+
+h5 {
+    font-color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+    color: whitesmoke;
 
 }
 #center {
